fix: update document retrieval to use getFirst() for consistency